[project]
name = "playground-shooting-game"
version = "0.1.0"
description = ""
authors = [
    { name = "rtyaoke", email = "11521999+rtyaoke@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["pygame>=2.6.1,<3", "numpy>=2.4.2,<3", "matplotlib>=3.10.8,<4"]

[tool.uv]
package = false
